setting min width to avoid truncation

--- a/styles/lazy-styles.css
+++ b/styles/lazy-styles.css
@@ -26,4 +26,5 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-width: 1200px;
 }
